zapata-dx/force-app/main/default/objects/Lectura_Odometro__c/Lectura_Odometro__c.object-meta.xml
<CustomObject>
    <description>Historial de lecturas declaradas o verificadas. Lookup, no master-detail, para conservar reparenting. Plan seccion 6.3.</description>
    <label>Lectura de odometro</label>
    <nameField>
        <displayFormat>LO-{000000}</displayFormat>
        <label>Numero de lectura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lecturas de odometro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>