zapata-dx/force-app/main/default/objects/Lectura_Odometro__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Unidad medida.</description>
    <label>Unidad</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Lecturas de odometro</relationshipLabel>
    <relationshipName>Lecturas_Odometro</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>