zapata-dx/force-app/main/default/objects/Lectura_Odometro__c/fields/Fecha_Lectura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Lectura__c</fullName>
    <description>Fecha de la medicion. No se acepta fecha futura.</description>
    <label>Fecha de lectura</label>
    <required>true</required>
    <type>Date</type>
</CustomField>