zapata-dx/force-app/main/default/objects/Lectura_Odometro__c/fields/Fuente__c.field-meta.xml
<CustomField>
    <fullName>Fuente__c</fullName>
    <description>Origen del dato. Solo Verificado sostiene una decision de cobertura.</description>
    <label>Fuente</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declarado</fullName>
                <default>true</default>
                <label>Declarado</label>
            </value>
            <value>
                <fullName>Verificado</fullName>
            </value>
            <value>
                <fullName>Seed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>