zapata-dx/force-app/main/default/objects/Lectura_Odometro__c/fields/Kilometraje__c.field-meta.xml
<CustomField>
    <fullName>Kilometraje__c</fullName>
    <description>Km declarados. Registrar_Lectura_Odometro valida que no decrezca.</description>
    <label>Kilometraje</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>