zapata-dx/force-app/main/default/objects/Lectura_Odometro__c/fields/Verificada__c.field-meta.xml
<CustomField>
    <fullName>Verificada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca de verificacion por el taller.</description>
    <label>Verificada</label>
    <type>Checkbox</type>
</CustomField>