zapata-dx/force-app/main/default/objects/Lectura_Odometro__c/validationRules/Kilometraje_Positivo.validationRule-meta.xml
<ValidationRule>
    <fullName>Kilometraje_Positivo</fullName>
    <active>true</active>
    <errorConditionFormula>Kilometraje__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Kilometraje__c</errorDisplayField>
    <errorMessage>El kilometraje no puede ser negativo.</errorMessage>
</ValidationRule>