zapata-dx/force-app/main/default/objects/Lectura_Odometro__c/validationRules/Verificada_Requiere_Fuente_Verificado.validationRule-meta.xml
<ValidationRule>
    <fullName>Verificada_Requiere_Fuente_Verificado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Verificada__c, NOT(ISPICKVAL(Fuente__c, &quot;Verificado&quot;)))</errorConditionFormula>
    <errorDisplayField>Verificada__c</errorDisplayField>
    <errorMessage>Solo una lectura con fuente Verificado puede marcarse como verificada. Una lectura declarada por el usuario no sostiene una decision de cobertura.</errorMessage>
</ValidationRule>