zapata-dx/force-app/main/default/objects/Lectura_Odometro__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Asset__c</columns>
    <columns>Kilometraje__c</columns>
    <columns>Fecha_Lectura__c</columns>
    <columns>Fuente__c</columns>
    <columns>Verificada__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>